beest/sut/bees/k8s-agent/files/test_ingress/example-ingress-1-22.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - anthonycornell.com
      secretName: tls-secret
  rules:
    - host: anthonycornell.com
      http:
        paths:
          - pathType: Prefix
            path: /apple
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - pathType: Prefix
            path: /banana
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
